# PsyAI

./: .env.example  .gitignore  .replit  ARCHITECTURE.md  CREATE_PR_INSTRUCTIONS.md  GETTING_STARTED.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  VM_SETUP.md  alembic.ini  app.py  design_guidelines.md  docker-compose.yml  init-db.sql  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
Collaborative Writing/: Project Tasks.md  psyAI Research Paper - Outline 2.md
Collaborative Writing/Artifacts/: base_outline_2025-11-17.md
Collaborative Writing/chat_history/: chat_2025-11-17.md
alembic/: env.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AppSidebar.tsx  ChatMessage.tsx  ConfidenceIndicator.tsx  ConversationCard.tsx  DetailedConfidenceIndicator.tsx  ExpertDashboard.tsx  PatientChatInterface.tsx  ThemeToggle.tsx
client/src/components/examples/: AppSidebar.tsx  ChatMessage.tsx  ConfidenceIndicator.tsx  ConversationCard.tsx  ExpertDashboard.tsx  PatientChatInterface.tsx
client/src/pages/: EscalationView.tsx  ExpertDashboardPage.tsx  PatientChat.tsx  PatientSessions.tsx  ReviewView.tsx  Settings.tsx
docker/: Dockerfile  docker-compose.yml
scripts/: README.md  setup_dev.sh  setup_vm.sh  test_api.py
server/: routes.ts  storage.ts
server/ai/: client.ts  confidence.ts  graph.ts  index.ts  prompts.ts
shared/: schema.ts
src/psyai/core/: README.md  __init__.py  config.py  exceptions.py  logging.py
src/psyai/core/utils/: __init__.py  decorators.py  retry.py  time_utils.py  validators.py
src/psyai/features/: README.md
src/psyai/features/chat/: README.md
src/psyai/platform/: README.md
src/psyai/platform/api_framework/: __init__.py  app.py
src/psyai/platform/api_framework/auth/: __init__.py  jwt.py
src/psyai/platform/api_framework/dependencies/: __init__.py  auth.py
src/psyai/platform/api_framework/middleware/: __init__.py  error_handler.py  logging.py
src/psyai/platform/api_framework/routers/: __init__.py  auth.py  chat.py  health.py  users.py
src/psyai/platform/api_framework/schemas/: __init__.py  auth.py  chat.py  users.py
src/psyai/platform/centaur_integration/: __init__.py  client.py  scoring.py
src/psyai/platform/centaur_integration/prompts/: __init__.py  templates.py
src/psyai/platform/langsmith_integration/: __init__.py  client.py
src/psyai/platform/langsmith_integration/evaluators/: __init__.py  base.py
src/psyai/platform/langsmith_integration/tracers/: __init__.py  decorators.py
src/psyai/platform/storage_layer/: __init__.py
src/psyai/platform/storage_layer/cache/: __init__.py  redis_client.py
src/psyai/platform/storage_layer/database/: __init__.py  base.py  models.py  session.py
src/psyai/platform/storage_layer/repositories/: __init__.py  base.py  chat.py  user.py
tests/: __init__.py
tests/platform/api_framework/: __init__.py  test_api.py  test_auth.py
tests/platform/centaur_integration/: test_client.py  test_prompts.py  test_scoring.py
tests/platform/storage_layer/: __init__.py  test_models.py  test_redis.py
tests/unit/core/: test_config.py  test_exceptions.py  test_time_utils.py  test_validators.py
